# repodoc-ai

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
dashboard/: index.html
docs/: ARCHITECTURE.md
src/: container.py  main.py
src/analyzers/detectors/: api_detector.py  ci_detector.py  tech_detector.py
src/analyzers/scanners/: commit_analyzer.py  file_parser.py  repo_scanner.py
src/api/: app.py  dependencies.py  schemas.py
src/api/middleware/: error_handler.py  logging.py
src/api/routes/: generate.py  health.py  webhook.py
src/application/: orchestrator.py  pr_workflow.py  webhook_handler.py
src/config/: logging.py  settings.py
src/domain/: __init__.py  entities.py  enums.py  exceptions.py  interfaces.py
src/generators/: __init__.py  badge_generator.py  readme_generator.py  templates.py
src/generators/section_generators/: __init__.py  api_docs.py  changelog.py  features.py  footer.py  header.py  installation.py  structure.py  tech_stack.py  testing.py
src/infrastructure/config/: loader.py  schema.py
src/infrastructure/github/: __init__.py  auth.py  client.py  webhook.py
tests/: conftest.py
tests/unit/: test_tech_detector.py
